# A5-Auth-Server

./: Dockerfile  README.md  docker-composer.yml  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: django.yml
a5_auth_server/: gunicorn_config.py  manage.py  wsgi.py
a5_auth_server/a5_auth_server/: asgi.py  settings.py  urls.py  wsgi.py
a5_auth_server/health_check/: apps.py  urls.py  views.py
a5_auth_server/ip_auth/: admin.py  apps.py  models.py  urls.py  views.py
a5_auth_server/ip_auth/controllers/: createIPUserController.py  createSessionController.py  removeIPUserController.py  resetIPTokenController.py  validateSessionController.py
a5_auth_server/ip_auth/migrations/: 0001_initial.py  0002_remove_ipproxykey_id_ipuser_home_group_and_more.py  0003_rename_ipproxykey_ipsessions.py  0004_rename_ipsessions_ipsession.py  0005_alter_ipuser_token.py
a5_auth_server/ip_auth/utils/: generate_token.py
a5_auth_server/ip_auth/validators/: validate_home_group.py  validate_ip_address.py  validate_session_key.py  validate_token.py
