[metadata]
name = ALVAN Authentication Server
desctiption = Authentication Server for ALVAN 5
author = Craig Sirota
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12

[options]
packages =
    prediction
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing = 
  pytest>=6.0
  pytest-cov>=2.0
  mypy>=0.910
  flake8>=3.9
  tox>=3.24

[options.package_data]
prediction = py.typed

[flake8]
max-line-length = 120
per-file-ignores =
    a5_auth_server/ip_auth/validators/validate_ip_address.py:E302,W605,E501
